[package]
name = "etcd3"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.0-alpha.6"
bytes = "0.4.12"
prost = "0.5.0"
prost-derive = "0.5.0"
prost-types = "0.5.0"
async-stream = "0.1.2"

[build-dependencies]
tonic-build = "0.1.0-alpha.3"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
